--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
@@ -16,41 +17,90 @@
             <h2>
                 FAQ
             </h2>
+            <!-- Questions -->
             <ul>
-                <li>
-                    How many team members can I invite?
-                </li>
-                    <p>
+                <!-- Single question -->
+                <div class="question">
+                    <li class="question-title">
+                        How many team members can I invite?
+                        <span class="icon-down">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                        <span class="icon-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </span>
+                    </li>
+                    <p class="question-text">
                         You can invite up to 2 additional users on the Free plan. There is no limit on 
                         team members for the Premium plan.
                     </p>
-                <hr/>
-                <li>
-                    What is the maximum file upload size?
-                </li>
-                    <p>
+                    <hr/>
+                </div>
+                <!-- Single question -->
+                <div class="question">
+                    <li class="question-title">
+                        What is the maximum file upload size?
+                        <span class="icon-down">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                        <span class="icon-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </span>
+                    </li>
+                    <p class="question-text">
                         No more than 2GB. All files in your account must fit your allotted storage space.
                     </p>
-                <hr/>
-                <li>How do I reset my password?
-                </li>
-                    <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-                    A reset link will be emailed to you.</p>
-                <hr/>
-                <li>
-                    Can I cancel my subscription?
-                </li>
-                    <p>
+                    <hr/>
+                </div>
+                <!-- Single question -->
+                <div class="question">
+                    <li class="question-title">
+                        How do I reset my password?
+                        <span class="icon-down">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                        <span class="icon-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </span>
+                    </li>
+                    <p class="question-text">
+                        Click “Forgot password” from the login page or “Change password” from your profile page.
+                        A reset link will be emailed to you.
+                    </p>
+                    <hr/>
+                </div>
+                <!-- Single question -->
+                <div class="question">
+                    <li class="question-title">
+                        Can I cancel my subscription?
+                        <span class="icon-down">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                        <span class="icon-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </span>
+                    </li>
+                    <p class="question-text">
                         Yes! Send us a message and we’ll process your request no questions asked.
                     </p>
-                <hr/>
-                <li>
-                    Do you provide additional support?
-                </li>
-                    <p>
+                    <hr/>
+                </div>
+                <!-- Single question -->
+                <div class="question">
+                    <li class="question-title">
+                        Do you provide additional support?
+                        <span class="icon-down">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                        <span class="icon-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </span>
+                    </li>
+                    <p class="question-text">
                         Chat and email support is available 24/7. Phone lines are open during normal business hours.
                     </p>
-                <hr/>
+                    <hr/>
+                </div>
             </ul>
     </div>
     </div>
