--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             </ul>
     </div>
     </div>
+    <footer>
+        Open sourced by <a href="https://github.com/vicflake/FAQ-accordion-card.git">Victoria Moreno</a>
+    </footer>
     <script src="src/app.js"></script>
 </body>
 </html>
