--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <div class="question">
                     <li class="question-title">
                         How many team members can I invite?
-                        <span class="icon-down">
+                        <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
-                        </span>
-                        <span class="icon-up">
+                        </button>
+                        <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
-                        </span>
+                        </button>
                     </li>
                     <p class="question-text">
                         You can invite up to 2 additional users on the Free plan. There is no limit on 
@@ -40,12 +40,12 @@
                 <div class="question">
                     <li class="question-title">
                         What is the maximum file upload size?
-                        <span class="icon-down">
+                        <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
-                        </span>
-                        <span class="icon-up">
+                        </button>
+                        <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
-                        </span>
+                        </button>
                     </li>
                     <p class="question-text">
                         No more than 2GB. All files in your account must fit your allotted storage space.
@@ -56,12 +56,12 @@
                 <div class="question">
                     <li class="question-title">
                         How do I reset my password?
-                        <span class="icon-down">
+                        <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
-                        </span>
-                        <span class="icon-up">
+                        </button>
+                        <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
-                        </span>
+                        </button>
                     </li>
                     <p class="question-text">
                         Click “Forgot password” from the login page or “Change password” from your profile page.
@@ -73,12 +73,12 @@
                 <div class="question">
                     <li class="question-title">
                         Can I cancel my subscription?
-                        <span class="icon-down">
+                        <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
-                        </span>
-                        <span class="icon-up">
+                        </button>
+                        <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
-                        </span>
+                        </button>
                     </li>
                     <p class="question-text">
                         Yes! Send us a message and we’ll process your request no questions asked.
@@ -89,12 +89,12 @@
                 <div class="question">
                     <li class="question-title">
                         Do you provide additional support?
-                        <span class="icon-down">
+                        <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
-                        </span>
-                        <span class="icon-up">
+                        </button>
+                        <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
-                        </span>
+                        </button>
                     </li>
                     <p class="question-text">
                         Chat and email support is available 24/7. Phone lines are open during normal business hours.
