div added in lieu of ul and li's. CSS and JS updated accordingly.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 FAQ
             </h2>
             <!-- Questions -->
-            <ul>
+            <div>
                 <!-- Single question -->
                 <div class="question">
-                    <li class="question-title">
+                    <div class="question-title">
                         How many team members can I invite?
                         <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
@@ -29,7 +29,7 @@
                         <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
                         </button>
-                    </li>
+                    </div>
                     <p class="question-text">
                         You can invite up to 2 additional users on the Free plan. There is no limit on 
                         team members for the Premium plan.
@@ -38,7 +38,7 @@
                 </div>
                 <!-- Single question -->
                 <div class="question">
-                    <li class="question-title">
+                    <div class="question-title">
                         What is the maximum file upload size?
                         <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
@@ -46,7 +46,7 @@
                         <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
                         </button>
-                    </li>
+                    </div>
                     <p class="question-text">
                         No more than 2GB. All files in your account must fit your allotted storage space.
                     </p>
@@ -54,7 +54,7 @@
                 </div>
                 <!-- Single question -->
                 <div class="question">
-                    <li class="question-title">
+                    <div class="question-title">
                         How do I reset my password?
                         <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
@@ -62,7 +62,7 @@
                         <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
                         </button>
-                    </li>
+                    </div>
                     <p class="question-text">
                         Click “Forgot password” from the login page or “Change password” from your profile page.
                         A reset link will be emailed to you.
@@ -71,7 +71,7 @@
                 </div>
                 <!-- Single question -->
                 <div class="question">
-                    <li class="question-title">
+                    <div class="question-title">
                         Can I cancel my subscription?
                         <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
@@ -79,7 +79,7 @@
                         <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
                         </button>
-                    </li>
+                    </div>
                     <p class="question-text">
                         Yes! Send us a message and we’ll process your request no questions asked.
                     </p>
@@ -87,7 +87,7 @@
                 </div>
                 <!-- Single question -->
                 <div class="question">
-                    <li class="question-title">
+                    <div class="question-title">
                         Do you provide additional support?
                         <button class="icon-down">
                             <i class="fas fa-chevron-down"></i>
@@ -95,13 +95,13 @@
                         <button class="icon-up">
                             <i class="fas fa-chevron-up"></i>
                         </button>
-                    </li>
+                    </div>
                     <p class="question-text">
                         Chat and email support is available 24/7. Phone lines are open during normal business hours.
                     </p>
                     <hr/>
                 </div>
-            </ul>
+            </div>
     </div>
     </div>
     <footer>
